--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,11 @@ h1, h2 {
     color: #333;
 }
 
-.game-container {
+.game-container{
+    display: none;
+}
+
+.game-board {
     margin: 20px 0;
 }
 
@@ -33,6 +37,7 @@ h1, h2 {
 }
 
 .mini-board {
+    position: relative;
     display: grid;
     grid-template-columns: repeat(3, 50px);
     border: 5px solid #ddd;
@@ -131,3 +136,27 @@ h1, h2 {
     }
 }*/
 
+/* Overlay styles */
+.end-game-overlay {
+    display: none; /* Initially hidden */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7); /* Semi-transparent black */
+    color: #fff;
+    font-size: 24px;
+    text-align: center;
+    line-height: 150px; /* Adjust based on your board's height */
+    opacity: 0;
+    transform: translateY(100%);
+    transition: opacity 0.5s, transform 0.5s;
+}
+
+/* Animation class to show the overlay */
+.show-overlay {
+    display: block;
+    opacity: 1;
+    transform: translateY(0);
+}
